smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/namespace-before-shapes.smithy
// Syntax error at line 2, column 1: Expected a namespace definition but found IDENTIFIER('string') | Model
string MyString
